@startuml

interface MainView {
   router: MainViewRouter
}

interface MainViewRouter {
    fragmentManager: FragmentManager
    uploadView: UploadView
    photoView: PhotoView

    fun openPhotoView(photo: PhotoModel)
    fun openUploadView()

    fun onHighlightPhoto(photo: PhotoModel)
}

MainView *-- MainViewRouter






interface UploadView {
    router: UploadViewRouter
}

interface UploadViewRouter {
    fragmentManager: FragmentManager
    mainRouter: MainViewRouter

    fun openLoadingDialog()
    fun closeLoadingDialog()
    fun openUploadedDialog()
    fun closeUploadedDialog()

    fun onHighlightPhoto(photo: PhotoModel)
}

MainViewRouter *-- UploadView
UploadView *-- UploadViewRouter




interface PhotoView {
    router: PhotoViewRouter
}

interface PhotoViewRouter {
    fragmentManager: FragmentManager
    mainRouter: MainViewRouter

    fun onBackButtonPressed()
    fun onHighlightPhoto(photo: PhotoModel)
}

MainViewRouter *-- PhotoView
PhotoView *-- PhotoViewRouter

@enduml